# JobHunterPro

./: .replit  README.md  app.py  applied_jobs.json  data_manager.py  database.py  dependencies.md  dependencies.txt  email_config_example.env  job_alerts.json  jobs_data.json  notification.py  pyproject.toml  requirements.txt  saved_jobs.json  scrapers.py  setup.sh  utils.py  web_scraper.py
.streamlit/: config.toml
